# alliance-squawk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: adm_service.rs  bot.rs  corporations_service.rs  esi.rs  information_service.rs  main.rs
src/commands/: adm.rs  adm_configure.rs  mod.rs
src/services/: adm_configuration.rs  adm_notification_service.rs  adm_service.rs  corporations_service.rs  information_service.rs  mod.rs
